--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #191919;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.tablero {
+  position:relative;
+  padding: 0;
+
+}
+
+.ficha{
+  position:absolute;
+  list-style: none;
+  background-color: aqua;
+  display: grid;
+  place-items: center;
+  font-size: 20px;
 }
