--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #191919;
+  background-color: #070D12; 
 }
 
 code {
@@ -26,4 +26,6 @@ code {
   display: grid;
   place-items: center;
   font-size: 20px;
+  width: 30px;
+  height: 30px;
 }
